infra/config/grafana-alloy/Gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-alloy
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: grafana-alloy.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    name: grafana-alloy-https
    hostname: grafana-alloy.k8sdev.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-alloy-tls
    allowedRoutes:
      namespaces:
        from: Same
